# Tokilake

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.en.legacy.md  README.en.md  README.legacy.md  README.md  README.zh-CN.legacy.md  README.zh-CN.md  Taskfile.yml  config.example.yaml  config.tokiame.example.json  go.mod  go.sum  go.work  go.work.sum  main.go  makefile  one-api.service  rustfmt.toml  server_proxy.go  server_proxy_test.go
.github/workflows/: docker-image.yml  linux-release.yml  macos-release.yml  release.yml  tokiame-npm.yml  windows-release.yml
cli/: flag.go
cmd/tokiame/: config_path.go  config_path_test.go  main.go
cmd/tokilake/: main.go
common/: json.go  user-token.go  user-token_test.go
common/config/: config.go  constants.go
common/objectstore/: config.go  objectstore.go  s3_compatible.go  s3_compatible_test.go
common/stmp/: email.go  template.go
common/storage/: upload.go
common/storage/drives/: s3.go
common/utils/: helper.go
controller/: auth_policy.go  github.go  google.go  google_test.go  group.go  lark.go  misc.go  oidc.go  option.go  private_group.go  token.go  tokilake.go  tokilake_test.go  user.go  webauthn.go  wechat.go
crates/api-server/: Cargo.toml
crates/api-server/src/: error.rs  lib.rs  tools.rs
crates/api-server/src/handlers/: chat_completion.rs  mod.rs  private_chat_completions.rs  private_models.rs  public_models.rs
crates/api-server/src/models/: chat.rs  mod.rs
crates/api-server/src/requests/: mod.rs  speech.rs
crates/common/: Cargo.toml
crates/common/src/: clients.rs  error.rs  lib.rs  messages.rs  random.rs  text.rs
crates/common/src/data/: chat.rs  mod.rs  request.rs
crates/common/src/log/: mod.rs
crates/common/src/namespace/: mod.rs
crates/common/src/proxy/: chat_openai.rs  mod.rs
crates/common/src/proxy/grpc/: mod.rs
crates/common/src/stream/: mod.rs  sse.rs
crates/inference-server/: Cargo.toml  build.rs  volo.yml
crates/inference-server/proto/: chat_message.proto  tokilake.proto
crates/inference-server/src/: lib.rs  pb.rs  server.rs  statistics.rs
crates/storage/: Cargo.toml
crates/storage/src/: clients.rs  error.rs  lib.rs
crates/storage/src/cache/: lru.rs  mod.rs
crates/tokilake-dashboard/: Cargo.toml
deploy/: .env.compose.example  .env.compose.letsencrypt.example  .env.example  Caddyfile  README.md  bootstrap-docker-compose-letsencrypt.sh  bootstrap-docker-compose.sh  bootstrap-nginx-letsencrypt-quic-update.sh  bootstrap-nginx-letsencrypt-update.sh  bootstrap-nginx-letsencrypt.sh  config.compose-nginx.yaml  config.local-test.yaml  config.production-nginx.yaml  docker-compose.hub.yml  docker-compose.nginx-letsencrypt.yaml  docker-compose.nginx.yaml  nginx.compose.acme.conf.template  nginx.compose.http.conf.template  nginx.compose.https.conf.template  nginx.stream.tokilake.conf  nginx.tokilake.conf  tokilake.service  verify-i18n-playwright.sh
docs/: ImageGen.md  ImageGen.zh.md  ImageGenChat.md  ImageGenChat.zh.md  VideoGen.md  VideoGen.zh.md  comparison.md  guide.en.md  guide.zh.md  index.md  tokilake-core-integration.md
docs/.vitepress/: config.mts
docs/deployment/: cli.md  env.md  index.md  storage.md  tokilake-tokiame.md  update.md
docs/dev/: index.md
docs/use/: FAQ.md  index.md
hack/scripts/: package-release.sh  render-tokiame-homebrew-formula.sh  write-sha256sums.sh
i18n/: en.json
middleware/: auth.go  distributor.go  turnstile-check.go
migrations/: 001_initial_schema.sql
mocks/sglang-vllm-diffusion/: README.md  server.py
model/: main.go  model_ownedby.go  option.go  option_config_test.go  private_group.go  task.go  tokilake_worker_node.go  user.go  user_group.go
packaging/homebrew/: README.md
packaging/npm/tokiame/: README.md  package.json  (+1 more)
pkg/log/: format.go  handler.go  handler_glog.go  logger.go  root.go
providers/: providers.go
providers/base/: common.go  interface.go
providers/tokiame/: base.go  stream.go  video.go  video_test.go
relay/: claude.go  common.go  common_test.go  gemini.go  model.go  responses.go
relay/relay_util/: responses_stream.go
relay/task/: common.go  main.go
router/: api-router.go  main.go  relay-router.go  tokilake.go
rust/: Cargo.toml  check.txt  rustfmt.toml  search.txt
rust/tokilake/: Cargo.toml  README.md
rust/tokilake-core/: Cargo.toml  README.md
rust/tokilake-core/src/: codec.rs  error.rs  gateway.rs  lib.rs  protocol.rs  roundtrip.rs  server.rs  service.rs  session.rs  tunnel.rs
rust/tokilake-core/src/tunnel/: mod.rs  quic.rs  smux.rs
rust/tokilake-server/: Cargo.toml
rust/tokilake-server/src/: main.rs
rust/tokilake-smux/: Cargo.toml  README.md
rust/tokilake-smux/benches/: smux_bench.rs
rust/tokilake-smux/src/: frame.rs  lib.rs  session.rs  stream.rs
rust/tokilake/src/: db.rs  lib.rs  main.rs  model.rs
rust/tokilake/src/api/: mod.rs
rust/tokilake/src/gateway/: auth.rs  handler.rs  mod.rs  route.rs  upstream.rs
rust/tokilake/src/relay/: middleware.rs  mod.rs
scripts/: async_video.py  test-tokilake-rust.sh  test-tokilake.sh
scripts/mockapi/: main.go
service/: private_group.go
service/tokilake/: client.go  client_data.go  gateway.go  gateway_test.go  protocol.go  quic_dualstack_test.go  quic_gateway.go  roundtrip.go  roundtrip_test.go  session_manager.go  tunnel.go  tunnel_stream.go  ws_conn.go
src/: main.rs
tokiame/: .gitignore  Makefile  client.go  client_data.go  client_data_test.go  go.mod  go.sum  models.toml.template
tokiame/api/: api_server.go  models.go
tokilake-core/: gateway.go  go.mod  go.sum  interfaces.go  protocol.go  quic_gateway.go  roundtrip.go  session_manager.go  tunnel.go  tunnel_stream.go  ws_conn.go
tokilake-onehub/: auth.go  controller.go  controller_test.go  logger.go  main.go  registry.go
tokilake-onehub/gateway/: global.go
tokilake-onehub/provider/: base.go  stream.go  video.go  video_test.go
tokilake-onehub/task/: base.go  factory.go  fetch.go  storage.go  submit.go  task_test.go
types/: chat.go  video.go
web/: README.md  index.html  package.json
web/src/: config.js  index.jsx
(+78 files in other folders)
