[package]
name = "tokilake"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/api-server",
    "crates/common",
    "crates/inference-server",
    "crates/storage",
]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "chrono",
    "sqlite",
] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
bytes = "1.10.1"
tokio-stream = "0.1.17"
thiserror = "2.0.12"

common = { path = "crates/common" }
faststr = { git = "https://github.com/Tokimorphling/faststr.git", rev = "2c96575", features = [
    "serde",
    "sqlx-sqlite",
] }
dotenvy = "0.15.7"

storage.path = "crates/storage"

[dependencies]
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dotenvy.workspace = true


anyhow = "1.0.98"

thiserror.workspace = true

storage.workspace = true
api-server = { path = "crates/api-server" }
inference-server.path = "crates/inference-server"

[patch.crates-io]
faststr = { git = "https://github.com/Tokimorphling/faststr.git", rev = "2c96575" }


[[bin]]
name = "tokilake"
path = "src/main.rs"


[profile.release]
opt-level = 3
strip = true
lto = "thin"
panic = 'abort'
codegen-units = 1
