[workspace]
members = ["tokilake-core", "tokilake-smux"]
resolver = "2"

[workspace.package]
authors = ["tokilake"]
categories = [
    "asynchronous",
    "network-programming",
    "development-tools",
    "ai",
    "llm-gateway",
]
edition = "2024"
keywords = ["gateway", "proxy", "tunnel", "async"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }

[profile.release-lto]
inherits = "release"
lto = true
