[workspace]
members = ["tokilake-core", "tokilake-smux", "tokilake-server"]
resolver = "2"

[workspace.package]
authors = ["tokilake"]
categories = [
    "asynchronous",
    "network-programming",
    "development-tools",
    "ai",
    "llm-gateway",
]
edition = "2024"
keywords = ["gateway", "proxy", "tunnel", "async"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

# Sync primitives
parking_lot = "0.12"
dashmap = "6"

# HTTP server
axum = { version = "0.7", features = ["ws"] }

# Internal crates
tokilake-core = { path = "tokilake-core" }
tokilake-smux = { path = "tokilake-smux" }

[profile.release-lto]
inherits = "release"
lto = true
