[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
faststr.workspace = true
serde.workspace = true
thiserror.workspace = true
common.workspace = true
tokio.workspace = true
tracing.workspace = true




moka = { version = "0.12.10", features = ["future"] }


[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
