[package]
name = "tokilake-core"
version = "0.1.0"
description = "Tokilake Core - High-performance tunnel gateway core library"
edition = "2021"

[features]
default = ["quic"]
quic = ["dep:quinn"]
ws = ["dep:tokio-tungstenite"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

# WebSocket
tokio-tungstenite = { version = "0.24", optional = true }

# QUIC
quinn = { version = "0.11", optional = true }

# Sync primitives
parking_lot = "0.12"
dashmap = "6"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.4"
futures-util = "0.3"

# Stream multiplexing (wire-compatible with Go smux)
smux = "0.2"

[[bin]]
name = "tokilake-server"
path = "src/server.rs"
