[package]
name = "tokilake"
version = "0.1.0"
description = "Tokilake - High-performance tunnel and gateway ecosystem"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
toasty = { version = "0.5.0", features = ["sqlite"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
service-async = "0.2"
tokilake-core = { workspace = true }
